--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,8 @@ git:
   depth: 3
 
 
-before_install:
-  - pip -q install coveralls
-
-install: pip install -e .
+install: pip install -e .[tests]
 
 script: coverage run tests/test.py -v
 
 after_success: coveralls
-
